--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --bg-color: #3D2F73;
-    --bg-section: #8E79D9;
+    --bg-color: #2B2151;
+    --bg-section: #47397A;
     --bg-tubo: #00000025;
-    --text-color: #f0f6fc;
-    --bx-default: #1a242a;
-    --bx-hover: #8c0303;
-    --bx-resposta: #1a242a;
-    --bx-error: #c81e43;
-    --bttn-color: #37F230;
+    --bttn-color: #4DFF40;
     --bttn-hover: #14940f;
+    --circle-color: #4DFF40;
+    --triangle-color: #FF4DD6;
+    --quadrate-color: #40DDFF;
+    --x-color: #FF4D4D;
 }
 
 body {
@@ -44,6 +43,9 @@ header {
     border: none;
     border-radius: 18px;
 
+    color: var(--bttn-hover);
+    font-size: 1rem;
+    font-family: "Poppins", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
 
@@ -52,6 +54,7 @@ header {
 
 #bttn:hover {
     background-color: var(--bttn-hover);
+    color: var(--bttn-color);
     transition: 300ms;
 }
 
@@ -70,7 +73,7 @@ main {
     align-items: center;
 
     width: 100%;
-    height: 80vh;
+    /* height: 60vh; */
 }
 
 .tubo {
@@ -121,7 +124,10 @@ footer {
 }
 
 .blockCirculo {
-    background-color: #15FF00;
+    background-color: var(--circle-color);
+    background-image: url('../assets/circulo.png');
+    background-repeat: no-repeat;
+    background-position: center;
 
     width: 100px;
     height: 100px;
@@ -131,7 +137,10 @@ footer {
 }
 
 .blockTriangulo {
-    background-color: #FF00D0;
+    background-color: var(--triangle-color);
+    background-image: url('../assets/triangulo.png');
+    background-repeat: no-repeat;
+    background-position: center;
 
     width: 100px;
     height: 100px;
@@ -141,7 +150,10 @@ footer {
 }
 
 .blockQuadrado {
-    background-color: #00D9FF;
+    background-color: var(--quadrate-color);
+    background-image: url('../assets/quadrado.png');
+    background-repeat: no-repeat;
+    background-position: center;
 
     width: 100px;
     height: 100px;
@@ -151,7 +163,10 @@ footer {
 }
 
 .blockX {
-    background-color: #FF0000;
+    background-color: var( --x-color);
+    background-image: url('../assets/x.png');
+    background-repeat: no-repeat;
+    background-position: center;
 
     width: 100px;
     height: 100px;
