--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,71 @@ footer {
     margin: 10px;
     border-radius: 4px;
 }
+
+/* tela celular vertical */
+
+@media screen and (max-width: 390px) {
+
+    header {
+        display: none;
+    }
+
+    main {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .tubo {
+        width: 40%;
+        margin: 1%;
+    }
+
+    #tubo-vazio {
+        width: 40%;
+        margin: 1%;
+    }
+        
+    .bloco {
+        width: 50%;
+        height: 50%;
+    }
+
+    footer {
+        display: none;
+    }
+}
+
+/* tela celular horizontal */
+
+@media screen and (max-width: 844px) and (max-height: 390px) {
+
+    #scoreHistory {
+        display: none;
+    }
+
+    main {
+        display: flex;
+        width: 100%;
+    }
+
+    .tubo {
+        width: 40%;
+        margin: 1%;
+    }
+
+    #tubo-vazio {
+        width: 40%;
+        margin: 1%;
+    }
+        
+    .bloco {
+        width: 50%;
+        height: 50%;
+    }
+
+    footer {
+        display: none;
+    }
+}
