--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 :root {
     --bg-color: #2B2151;
     --bg-section: #47397A;
@@ -26,13 +28,19 @@ header {
     width: 100%;
     
     background-color: var(--bg-section);
+}
+
+header span {
+    font-size: 1.5rem;
+    font-family: 'Poppins';
     color: black;
     font-weight: bold;
 }
 
 #contador {
+    font-size: 1rem;
+    font-family: 'Press Start 2P';
     color: white;
-    font-weight: bold;
 }
 
 #bttn {
@@ -46,9 +54,8 @@ header {
 
     color: var(--bttn-hover);
     font-size: 1rem;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Press Start 2P';
     font-weight: bold;
-    text-transform: uppercase;
 
     cursor: pointer;
 }
@@ -136,60 +143,36 @@ footer span {
 
 
 /* classe bloco */
-.blockCirculo {
+.bloco {
+    background-repeat: no-repeat;
+    background-position: center;
+
+    width: 100px;
+    height: 100px;
+
+    margin: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.circulo {
     background-color: var(--circle-color);
     background-image: url('../assets/circulo.png');
-    background-repeat: no-repeat;
-    background-position: center;
-
-    width: 100px;
-    height: 100px;
-
-    margin: 10px;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
-.blockTriangulo {
+.triangulo {
     background-color: var(--triangle-color);
     background-image: url('../assets/triangulo.png');
-    background-repeat: no-repeat;
-    background-position: center;
-
-    width: 100px;
-    height: 100px;
-
-    margin: 10px;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
-.blockQuadrado {
+.quadrado {
     background-color: var(--quadrate-color);
     background-image: url('../assets/quadrado.png');
-    background-repeat: no-repeat;
-    background-position: center;
-
-    width: 100px;
-    height: 100px;
-
-    margin: 10px;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
-.blockX {
-    background-color: var( --x-color);
+.x {
+    background-color: var(--x-color);
     background-image: url('../assets/x.png');
-    background-repeat: no-repeat;
-    background-position: center;
-
-    width: 100px;
-    height: 100px;
-
-    margin: 10px;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 /* .block:hover {
@@ -200,6 +183,7 @@ footer span {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 } */
 
+/* classe bloco */
 
 
 
