--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 :root {
@@ -174,72 +173,4 @@ footer span {
     background-color: var(--x-color);
     background-image: url('../assets/x.png');
 }
-
-
-/* tela celular vertical */
-
-@media screen and (max-width: 414px) {
-
-    header {
-        display: none;
-    }
-
-    main {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        height: 100vh;
-    }
-
-    .tubo {
-        width: 40%;
-        margin: 1%;
-    }
-
-    #tubo-vazio {
-        width: 40%;
-        margin: 1%;
-    }
-        
-    .bloco {
-        width: 50%;
-        height: 50%;
-    }
-
-    footer {
-        display: none;
-    }
-}
-
-/* tela celular horizontal */
-
-@media screen and (max-width: 760px) and (max-height: 390px) {
-
-    #scoreHistory {
-        display: none;
-    }
-
-    main {
-        display: flex;
-        width: 100%;
-    }
-
-    .tubo {
-        width: 40%;
-        margin: 1%;
-    }
-
-    #tubo-vazio {
-        width: 40%;
-        margin: 1%;
-    }
-        
-    .bloco {
-        width: 50%;
-        height: 50%;
-    }
-
-    footer {
-        display: none;
-    }
-}
+/* fim da classe bloco */
