--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,24 @@ main {
 
 }
 
+#tubo-vazio {
+    background-color: var(--bg-tubo);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 50px;
+
+    width: 160px;
+    height: 534px;
+
+    border: 2px solid;
+    border-radius: 18px;
+}
+
 .bloco {
     background-repeat: no-repeat;
     background-position: center;
