--- a/css/style.css
+++ b/css/style.css
@@ -163,4 +163,145 @@ footer span {
     color: var(--circle-color);
 }
 
+@media screen and (min-width: 360px) and (max-width: 800px) {
+    header {
+        display: flex;
 
+        height: 100px;
+        width: 100%;
+    }
+
+    #bttn {
+        width: 100px;
+        height: 32,5px;
+    
+        font-size: 0.8rem;
+    }
+
+    header span{
+        font-size: 20px;
+    }
+
+    header #scoreHistory{
+        display: none;
+    }
+
+    main {
+        display: flex;
+        flex-wrap: wrap;
+
+        width: 100%;
+    }
+
+    .tubo {
+        margin: 25px;
+        
+        width: 80px;
+        height: 267px;
+        
+        border: 2px solid;
+        border-radius: 18px;
+    }
+
+    .bloco {
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        width: 50px;
+        height: 50px;
+    }
+
+    .circulo {
+        background-color: var(--circle-color);
+        background-image: url('../assets/circulo.png');
+        background-size: 50%;
+    }
+    
+    .triangulo {
+        background-color: var(--triangle-color);
+        background-image: url('../assets/triangulo.png');
+        background-size: 50%;
+    }
+    
+    .quadrado {
+        background-color: var(--quadrate-color);
+        background-image: url('../assets/quadrado.png');
+        background-size: 50%;
+    }
+    
+    .x {
+        background-color: var(--x-color);
+        background-image: url('../assets/x.png');
+        background-size: 50%;
+    }
+
+    footer {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    header {
+        display: flex;
+
+        height: 100px;
+        width: 100%;
+    }
+
+    header span{
+        font-size: 20px;
+    }
+
+    header #scoreHistory{
+        display: none;
+    }
+
+    main {
+        width: 100%;
+        height: 80vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .tubo {
+        margin: 25px;
+        
+        width: 127px;
+        height: 427px;
+        
+        border: 2px solid;
+        border-radius: 18px;
+    }
+
+    .bloco {
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        width: 80px;
+        height: 80px;
+    }
+
+    .circulo {
+        background-color: var(--circle-color);
+        background-image: url('../assets/circulo.png');
+    }
+    
+    .triangulo {
+        background-color: var(--triangle-color);
+        background-image: url('../assets/triangulo.png');
+    }
+    
+    .quadrado {
+        background-color: var(--quadrate-color);
+        background-image: url('../assets/quadrado.png');
+    }
+    
+    .x {
+        background-color: var(--x-color);
+        background-image: url('../assets/x.png');
+    }
+
+    footer {
+        text-align: center;
+    }
+}
