--- a/css/style.css
+++ b/css/style.css
@@ -80,27 +80,33 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     width: 100%;
 }
 
 .tubo {
     background-color: var(--bg-tubo);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
-
+    transition: background-color 0.3s;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    
     margin: 50px;
-
+    
     width: 160px;
     height: 534px;
-
+    
     border: 2px solid;
     border-radius: 18px;
+    
+}
 
+
+.tubo.over {
+    background-color: #f0f0f0;
 }
 
 .bloco {
@@ -113,6 +119,11 @@ main {
     margin: 10px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.dragging {
+    opacity: 0.5;
+    transform: scale(1.05);
 }
 
 .circulo {
@@ -150,4 +161,229 @@ footer {
 
 footer span {
     color: var(--circle-color);
+}
+
+/* ORIENTAÇÃO CELULARES */
+@media screen and (min-width: 300px) and (max-width: 800px) {
+    header {
+        display: flex;
+        flex-wrap: wrap;
+
+        height: 100px;
+        width: 100%;
+    }
+
+    #bttn {
+        width: 100px;
+        height: 32,5px;
+    
+        font-size: 0.8rem;
+    }
+
+    header span{
+        font-size: 20px;
+    }
+
+    header #scoreHistory{
+        display: none;
+    }
+
+    main {
+        display: flex;
+        flex-wrap: wrap;
+
+        width: 100%;
+    }
+
+    .tubo {
+        margin: 25px;
+        
+        width: 80px;
+        height: 267px;
+        
+        border: 2px solid;
+        border-radius: 18px;
+    }
+
+    .bloco {
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        width: 50px;
+        height: 50px;
+    }
+
+    .circulo {
+        background-color: var(--circle-color);
+        background-image: url('../assets/circulo.png');
+        background-size: 50%;
+    }
+    
+    .triangulo {
+        background-color: var(--triangle-color);
+        background-image: url('../assets/triangulo.png');
+        background-size: 50%;
+    }
+    
+    .quadrado {
+        background-color: var(--quadrate-color);
+        background-image: url('../assets/quadrado.png');
+        background-size: 50%;
+    }
+    
+    .x {
+        background-color: var(--x-color);
+        background-image: url('../assets/x.png');
+        background-size: 50%;
+    }
+
+    footer {
+        display: none;
+    }
+}
+
+/* ORIENTAÇÃO CELULAR LANDSCAPE */
+@media screen and (max-height: 375px) and (orientation: landscape) {
+    header {
+        display: flex;
+        flex-wrap: wrap;
+
+        height: 100px;
+        width: 100%;
+    }
+
+    #bttn {
+        width: 100px;
+        height: 32,5px;
+    
+        font-size: 0.8rem;
+    }
+
+    header span{
+        font-size: 20px;
+    }
+
+    header #scoreHistory{
+        display: none;
+    }
+
+    main {
+        display: flex;
+        flex-wrap: wrap;
+
+        width: 100%;
+    }
+
+    .tubo {
+        margin: 25px;
+        
+        width: 80px;
+        height: 267px;
+        
+        border: 2px solid;
+        border-radius: 18px;
+    }
+
+    .bloco {
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        width: 50px;
+        height: 50px;
+    }
+
+    .circulo {
+        background-color: var(--circle-color);
+        background-image: url('../assets/circulo.png');
+        background-size: 50%;
+    }
+    
+    .triangulo {
+        background-color: var(--triangle-color);
+        background-image: url('../assets/triangulo.png');
+        background-size: 50%;
+    }
+    
+    .quadrado {
+        background-color: var(--quadrate-color);
+        background-image: url('../assets/quadrado.png');
+        background-size: 50%;
+    }
+    
+    .x {
+        background-color: var(--x-color);
+        background-image: url('../assets/x.png');
+        background-size: 50%;
+    }
+
+    footer {
+        display: none;
+    }
+}
+
+/* ORIENTAÇÃO TABLET */
+@media screen and (max-width: 1300px) {
+    header {
+        display: flex;
+
+        height: 100px;
+        width: 100%;
+    }
+
+    header span{
+        font-size: 20px;
+    }
+
+    header #scoreHistory{
+        display: none;
+    }
+
+    main {
+        width: 100%;
+        height: 80vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .tubo {
+        margin: 25px;
+        
+        width: 127px;
+        height: 427px;
+        
+        border: 2px solid;
+        border-radius: 18px;
+    }
+
+    .bloco {
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        width: 80px;
+        height: 80px;
+    }
+
+    .circulo {
+        background-color: var(--circle-color);
+        background-image: url('../assets/circulo.png');
+    }
+    
+    .triangulo {
+        background-color: var(--triangle-color);
+        background-image: url('../assets/triangulo.png');
+    }
+    
+    .quadrado {
+        background-color: var(--quadrate-color);
+        background-image: url('../assets/quadrado.png');
+    }
+    
+    .x {
+        background-color: var(--x-color);
+        background-image: url('../assets/x.png');
+    }
+
+    footer {
+        text-align: center;
+    }
 }
